# study-roulette

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  studies.example.toml
src/study_roulette/: __init__.py  app.py  redirect.py  settings.py  studies.py
tests/: conftest.py  test_app.py  test_redirect.py  test_studies.py
